# aircraft-performance

./: .gitmodules  Cargo.toml  landing-table-generator.pl  take-off-table-generator.pl
src/: main.rs
src/data/: airports.rs  mod.rs
src/data/performance/: atmosphere_bounds.rs  distance.rs  headwinds.rs  mod.rs  performance_row.rs
src/data/performance/aircraft/: cessna150j.rs  cessna172m.rs  mod.rs
src/math/: mod.rs  wind.rs
src/pages/: airport.rs  cessna150j.rs  mod.rs  runway.rs
src/pages/aircraft_pages/: cessna150j.rs  cessna172m.rs  mod.rs
static/: index.html  performance.html  styles.css
static/scripts/: child-main.js  main.js
templates/: airport.html  runway.html  to_page.html
templates/aircraft/cessna150j/: landing.html  take-off.html  takeoff.html
templates/macros/: addition_offset.html  percent_between.html  percent_of.html  performance_table_body.html  start_landing_flow.html
templates/macros/cessna150j/: grass_correction.html  temperature_correction.html
templates/partials/: runway.html
templates/partials/aircraft/cessna150j/: landing.html  take-off.html
templates/partials/aircraft/cessna172m/: performance.html
