[package]
name = "aircraft-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
atoi = "2.0.0"
axum = "0.7.5"
csv = "1.3.0"
lazy_static = "1.5.0"
metar = "0.7.7"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "util"] }
